# utils_ros

./: CMakeLists.txt  README.md  package.xml
config/: euroc.yaml
config/aqua/: left_speedo1_bbdos2019.yaml  left_speedo1_downsize.yaml  right_speedo1_bbdos2019.yaml  right_speedo1_downsize.yaml  speedo1.yaml
config/gopro/: gopro1_params.yaml  gopro2_params.yaml
config/stereo_rig/: flir_air.yaml  flir_uw.yaml  left_after_mexico.yaml  left_params.yaml  left_params_800x600.yaml  left_params_800x600_cropped.yaml  right_after_mexico.yaml  right_params.yaml  right_params_800x600.yaml  right_params_800x600_cropped.yaml  shipwreck.yaml  stereo_rig_1.yaml  stereorig.yaml  stereorig1.yaml  stereorig2.yaml  stereorig_cropped.yaml  stereorig_mexico.yaml
include/: BagSync.h  BagWriter.h  Definitions.h  EurocDataProvider.h  PoseInterpolator.h  StereoSyncOnline.h  Trajectory.h  Utils.h
launch/: add_camera_info.launch  add_gopro_camera_info.launch  add_sonar.launch  add_svin_pose.launch  ar_tags.launch  asl_to_bag.launch  asl_to_bag_gt.launch  bag_stereo_sync.launch  bag_to_asl.launch  bag_to_colmap.launch  colmap_stereo.launch  extract_bag_asl.launch  extract_bag_colmap.launch  extract_bag_stereo.launch  extract_image_gopro.launch  extract_images.launch  extract_stereo_sync_bag.launch  gopro_to_asl.launch  interpolate_poses.launch  interpolate_traj.launch  sync_bag.launch  sync_images.launch  traj_to_pcl.launch  write_keyframe_image.launch
scripts/: add_camera_info.py  asl_to_rosbag.py  bag_stereo_sync.py  bag_to_asl.py  bag_to_colmap.py  colmap_stereo.py  extract_bag_stereo.py  extract_images.py  goprobag_to_asl.py  record_ar_pose.py  record_odom_msg.py  rosbag_stereo_sync.py  stereo_sync.py  stereo_test.py  sync_images.py  test_ar_tag.py
src/: BagSync.cpp  BagWriter.cpp  Definitions.cpp  EurocDataProvider.cpp  PoseInterpolate.cpp  PoseInterpolator.cpp  StereoSyncOnline.cpp  StereoSyncTopics.cpp  Trajectory.cpp  Utils.cpp  add_sonar.cpp  add_svin_gt.cpp  asl_to_rosbag.cpp  bag_to_asl.cpp  extract_colmap_bag.cpp  interpolate_trajectories.cpp  sync_bag.cpp  sync_images.cpp  traj_to_pcl.cpp  write_keyframe_image.cpp
